# tarot_bot

./: main.py  pyproject.toml
bot/agent/: agent_chat.py  base_agent.py  gemini_agent.py  open_ai_agent.py  open_ai_chat_agent.py  test_agent.py
bot/client/: client.py  client_messages.py
bot/common/: constants.py  debug_tools.py  logging.py  utils.py
configs/: agent_scenarios.yaml  bot_parameters.yaml  bot_scenarios.yaml  scenarios.yaml
tests/: test_openai_agent.py
